# myPod

./: README.md  justfile
doc/: expenditure.md
doc/clickwheel/: clickwheel.c  clickwheel.h  main.c
egui_try/: Cargo.toml
egui_try/src/: main.rs  mpd_ctl.rs
playerGUI/: Cargo.toml
playerGUI/src/: main.rs
utils/: README.md
